# hoodle

./: .HISTORY  .envrc  .gitignore  .travis.yml  CHANGES  Coroutine.hs  Driver.hs  Event.hs  EventHandler.hs  FileObserver.hs  HINotify.hs  IOActor.hs  LICENSE  Logger.hs  Lsof.hs  Object.hs  QServer.hs  Queue.hs  README.md  Setup.lhs  World.hs  WorldActor.hs  build-shell.nix  build.conf  build.sh  builddep.sh  buildfull.sh  buildgtk3.sh  cabal.project  cabal.project.local.ghc96  cabal.project.local.ghcHEAD  config.nix  coroutine-object.cabal  coroutine-object.hs  dbus.conf  default.nix  default2.nix  deps.nix  flake.nix  hie.yaml  (+25 more)
.circleci/: config.yml
build-tools/: CHANGELOG.md  hoodle-build-tools.cabal
build-tools/app/: checkImports.hs
build-tools/src/Plugin/: CheckImports.hs
builder/: default.nix  hoodle-builder.cabal
builder/src/Text/Hoodle/: Builder.hs
builder/src/Text/Hoodle/Builder/: V0_1_1.hs  V0_2_2.hs  V0_3.hs
builder/src/Text/Hoodlet/: Builder.hs
core/: default.nix  hoodle-core.cabal
core/csrc/: XInput.c  c_initdevice.c  c_initdevice.h
core/resource/: hoodle.css  menu.xml
core/src/Debug/Hoodle/Coroutine/: Draw.hs
core/src/Hoodle/: Accessor.hs  Config.hs  Device.hsc  GUI.hs  GUIView.hs  Script.hs  Type.hs  Util.hs
core/src/Hoodle/Coroutine/: Callback.hs  Commit.hs  ContextMenu.hs  Default.hs  Dialog.hs  Draw.hs  Eraser.hs  File.hs  HandwritingRecognition.hs  Highlighter.hs  Hub.hs  HubInternal.hs-boot  LaTeX.hs  Layer.hs  Link.hs  Minibuffer.hs  Mode.hs  Network.hs  Page.hs  Pen.hs  Scroll.hs  Select.hs  TextInput.hs  VerticalSpace.hs  Window.hs
core/src/Hoodle/Coroutine/Default/: Menu.hs
core/src/Hoodle/Coroutine/Select/: Clipboard.hs  ManipulateImage.hs
core/src/Hoodle/GUI/: Menu.hs  Reflect.hs
core/src/Hoodle/ModelAction/: Adjustment.hs  Clipboard.hs  ContextMenu.hs  Eraser.hs  File.hs  Layer.hs  Network.hs  Page.hs  Pen.hs  Select.hs  Text.hs  Window.hs
core/src/Hoodle/Renderer/: Default.hs
core/src/Hoodle/Script/: Coroutine.hs  Hook.hs
core/src/Hoodle/Type/: Alias.hs  Canvas.hs  Clipboard.hs  Coroutine.hs  Enum.hs  Event.hs  HoodleState.hs  Hub.hs  PageArrangement.hs  Predefined.hs  Synchronization.hs  Undo.hs  Widget.hs  Window.hs
core/src/Hoodle/Util/: Verbatim.hs
core/src/Hoodle/View/: Coordinate.hs  Draw.hs
core/src/Hoodle/Widget/: Clock.hs  Dispatch.hs  Layer.hs  PanZoom.hs  Scroll.hs
coroutine-object/: LICENSE  Setup.lhs  coroutine-object.cabal  default.nix
coroutine-object/example/: Event.hs  Sample.hs  SampleActor.hs  Simple.hs  coroutine-object-test.hs  coroutine-object.hs
grid/: hoodle-grid.cabal
grid/app/: Main.hs
hoodle/: CHANGES  LICENSE  Setup.lhs  build.conf  default.nix  hoodle.cabal
hoodle-builder/: .travis.yml  default.nix  hoodle-builder.cabal
hoodle-builder/src/Text/Hoodle/: Builder.hs
hoodle-builder/src/Text/Hoodlet/: Builder.hs
hoodle-core/: CHANGES  Config.hs  LICENSE  Setup.lhs  build.conf  builddep.sh  default.nix  hoodle-core.cabal  xSetup.lhs
hoodle-core/csrc/: c_initdevice.c  c_initdevice.h
hoodle-core/resource/: menu.xml
hoodle-core/src/Hoodle/: Accessor.hs  Config.hs  Device.hsc  GUI.hs  Script.hs  Type.hs  Util.hs
hoodle-core/src/Hoodle/Coroutine/: Callback.hs  Commit.hs  ContextMenu.hs  Default.hs  Dialog.hs  Draw.hs  Eraser.hs  File.hs  HandwritingRecognition.hs  Highlighter.hs  Hub.hs  HubInternal.hs  HubInternal.hs-boot  LaTeX.hs  Layer.hs  Link.hs  Minibuffer.hs  Mode.hs  Network.hs  Page.hs  Pen.hs  Scroll.hs  Select.hs  Socket.hs  TextInput.hs  VerticalSpace.hs  Window.hs
hoodle-core/src/Hoodle/GUI/: Menu.hs  Reflect.hs
hoodle-core/src/Hoodle/ModelAction/: Adjustment.hs  Clipboard.hs  ContextMenu.hs  File.hs  Layer.hs  Page.hs  Pen.hs  Select.hs  Text.hs  Window.hs
hoodle-core/src/Hoodle/Renderer/: Default.hs
hoodle-core/src/Hoodle/Script/: Coroutine.hs  Hook.hs
hoodle-core/src/Hoodle/Type/: Alias.hs  Canvas.hs  Coroutine.hs  Enum.hs  Event.hs  HoodleState.hs  Hub.hs  PageArrangement.hs  Predefined.hs  Synchronization.hs  Undo.hs  Widget.hs  Window.hs
hoodle-core/src/Hoodle/View/: Coordinate.hs  Draw.hs
hoodle-core/src/Hoodle/Widget/: Clock.hs  Dispatch.hs  Layer.hs  PanZoom.hs  Scroll.hs
hoodle-core/template/: index.html.st
hoodle-extra/: hoodle-extra.cabal
hoodle-extra/exe/: DiffDB.hs  Migrate.hs  SqliteDB.hs  TextFileDB.hs  Util.hs  dumpiddb.hs  idfilepathdb.hs  networkedit.hs  registerip.hs
hoodle-extra/lib/Hoodle/Manage/: Connect.hs  DocDatabase.hs  SqliteDB.hs
hoodle-manage/: hoodle-manage.cabal
hoodle-manage/src/Hoodle/: Manage.hs
hoodle-manage/test/: test.hs
hoodle-parser/: build.conf  builddep.sh  default.nix  hoodle-parser.cabal
hoodle-publish/: default.nix  hoodle-publish.cabal
hoodle-publish/exe/: hoodle-publish.hs
hoodle-publish/exe/Hoodle/Publish/: PDF.hs
hoodle-publish/lib/Hoodle/Publish/: PDF.hs
hoodle-render/: default.nix  hoodle-render.cabal
hoodle-render/examples/: print1page.hs
hoodle-render/src/Graphics/Hoodle/: Render.hs
hoodle-render/src/Hoodle/Util/: Process.hs
hoodle-render/src/trash/Old/: BBoxMapPDF.hs  BBoxOld.hs  InBBox.hs  Simple.hs  SimpleNew.hs
hoodle-render/trash/: RenderCache.hs
hoodle-types/: .gitignore  LICENSE  builddep.sh  default.nix  hoodle-types.cabal
hoodle-types/src/Data/Hoodle/: BBox.hs  Generic.hs  Hashed.hs  Select.hs  Simple.hs  Util.hs  Zipper.hs
hoodle-types/trash/: Simple.hs
hoodle/app/hoodle/: Main.hs
hoodle/app/hoodle-view/: Main.hs
hoodle/exe/: hoodle.hs
hoodle/lib/Hoodle/: Command.hs  Job.hs  ProgType.hs  StartUp.hs
hoodle/src/Hoodle/: Command.hs  Job.hs  ProgType.hs
log/: hoodle-log.cabal  logcat.hs
log/app/gtkApp/: Main.hs
log/app/logcat/: Control.hs  Main.hs  Render.hs  Types.hs  Util.hs
log/app/logcat/Util/: Event.hs  Histo.hs
log/app/testApp/: Main.hs  cbit.c  cbit.h
parser/: .gitignore  default.nix  hoodle-parser.cabal
parser/examples/: parsetest.hs
parser/src/Text/Hoodle/: Parse.hs
render/: build.conf  default.nix  hoodle-render.cabal
render/src/Graphics/Hoodle/: Render.hs
render/src/Hoodle/Util/: Process.hs
(+627 files in other folders)
