Name:		coroutine-object
Version:	0.0
Synopsis:       Object-oriented programming realization using coroutine 
Description: 	Object-oriented programming realization using coroutine 
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.8
data-files:      
Library
  hs-source-dirs: src
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends:   base>4, 
                   mtl>2, 
                   data-lens == 2.10.* , 
                   lens == 2.4.*,
                   containers == 0.4.*,
                   transformers == 0.3.*, 
                   transformers-free == 1.0.*
  Other-Modules:   
  exposed-modules:
                   Control.Monad.Coroutine
                   Control.Monad.Coroutine.Driver
                   Control.Monad.Coroutine.EventHandler 
                   Control.Monad.Coroutine.Event 
                   -- Control.Monad.Coroutine.FileObserver 
                   -- Control.Monad.Coroutine.HINotify
                   Control.Monad.Coroutine.IOActor 
                   Control.Monad.Coroutine.Logger 
                   -- Control.Monad.Coroutine.Lsof 
                   Control.Monad.Coroutine.Object 
                   -- Control.Monad.Coroutine.QServer 
                   Control.Monad.Coroutine.Queue 
                   Control.Monad.Coroutine.World
                   Control.Monad.Coroutine.World.Sample 
                   Control.Monad.Coroutine.World.SampleActor
                   Control.Monad.Coroutine.World.Sample2
                   Control.Monad.Coroutine.World.SampleActor2
 
Executable coroutine-object
  Main-is: coroutine-object.hs
  hs-source-dirs: exe
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: base>4, 
                 transformers == 0.3.*, 
                 mtl > 2, 
                 coroutine-object 
