Name:		coroutine-object
Version:	0.0.999
Synopsis:       Object-oriented programming realization using coroutine 
Description: 	Object-oriented programming realization using coroutine 
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.8
data-files:      
Library
  hs-source-dirs: src
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind -fno-warn-orphans
  ghc-prof-options: -caf-all -auto-all
  Build-Depends:   base>4, 
                   mtl>2, 
                   lens == 2.4.*,
                   containers == 0.4.*,
                   transformers == 0.3.*, 
                   transformers-free == 1.0.*, 
                   bytestring == 0.9.*,
                   safecopy == 0.6.*,
                   uuid == 1.2.*,
                   cereal == 0.3.*
  Other-Modules:   
  exposed-modules:
                   Control.Monad.Coroutine
                   Control.Monad.Coroutine.Driver
                   Control.Monad.Coroutine.EventHandler 
                   Control.Monad.Coroutine.Event 
                   Control.Monad.Coroutine.IOActor 
                   Control.Monad.Coroutine.Logger
                   Control.Monad.Coroutine.Logger.Simple  
                   Control.Monad.Coroutine.Object 
                   Control.Monad.Coroutine.Queue 
                   Control.Monad.Coroutine.World




 
