Name:		hoodle-builder
Version:	0.1
Synopsis:	text builder for hoodle file format 
Description: 	This library builds text xoj format file from hoodle data structure
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Category:       Text
Build-Type: 	Simple
Cabal-Version:  >= 1.8
data-files:     CHANGES
Source-repository head
  type: git
  location: http://www.github.com/wavewave/hoodle-builder

Library
  hs-source-dirs: src
  ghc-options: 	-Wall -funbox-strict-fields -fno-warn-unused-do-bind -fno-warn-orphans
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                   base == 4.*,
                   hoodle-types >= 0.0.999 && < 0.2,
                   lens >= 2.4 && < 2.7,
                   blaze-builder == 0.3.*, 
                   strict == 0.3.*, 
                   -- double-conversion == 0.2.*, 
                   bytestring == 0.9.*
                 
  Exposed-Modules: 
                   Text.Hoodle.Builder
  Other-Modules: 

 
		 