Name:		hoodle-core
Version:	0.6.999
Synopsis:	Core library for hoodle
Description: 	Hoodle is a pen notetaking program written in haskell. 
                hoodle-core is the core library written in haskell and 
                using gtk2hs
Homepage:       http://ianwookim.org/hoodle
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Category:       Application
Tested-with:    GHC == 7.0
Build-Type: 	Custom
Cabal-Version:  >= 1.8
data-files:     template/*.html.st
                resource/*.png
                CHANGES
                Config.hs
Source-repository head
  type: git
  location: http://www.github.com/wavewave/hoodle-core

Flag Poppler
  Description: Enable poppler support
  Default:     True


Library
  hs-source-dirs: lib
  ghc-options: 	-Wall -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all

  if flag(poppler) 
    Build-Depends:   base == 4.*, 
                     mtl == 2.*,
                     directory == 1.*,
                     filepath == 1.*, 
                     strict == 0.3.*,
                     gtk == 0.12.*, 
                     cairo == 0.12.*,
                     coroutine-object >= 0.0.999 && < 0.2, 
                     transformers == 0.3.*,
                     transformers-free == 1.0.*,
                     xournal-types >= 0.4.999 && < 0.6,
                     xournal-parser >= 0.4.999 && < 0.6,
                     xournal-render >= 0.6.999 && < 0.8,
                     xournal-builder >= 0.1.999 && < 0.3,
                     containers == 0.4.*,
                     template-haskell == 2.*,
                     bytestring == 0.9.*, 
                     lens >= 2.4 && < 2.6,
                     configurator == 0.2.*,
                     poppler == 0.12.*, 
                     time >= 1.2 && < 1.5, 
                     TypeCompose == 0.9.*, 
                     Diff == 0.1.*, 
                     dyre == 0.8.*, 
                     cereal == 0.3.5.*,
                     base64-bytestring == 0.1.*
  else 
    Build-Depends:   base == 4.*, 
                     mtl == 2.*,
                     directory == 1.*,
                     filepath == 1.*, 
                     strict == 0.3.*,
                     gtk == 0.12.*, 
                     cairo == 0.12.*,
                     coroutine-object >= 0.0.999 && < 0.2,
                     transformers == 0.3.*,
                     transformers-free == 1.0.*,
                     xournal-types >= 0.4.0.999 && < 0.5 ,
                     xournal-parser == 0.4.*,
                     xournal-render >= 0.6.999 && < 0.8,
                     xournal-builder >= 0.1.1 && < 0.2,
                     containers == 0.4.*,
                     template-haskell == 2.*,
                     bytestring == 0.9.*, 
                     lens >= 2.4 && < 2.6,
                     configurator == 0.2.*, 
                     time == 1.2.*, 
                     TypeCompose == 0.9.*, 
                     Diff == 0.1.*, 
                     dyre == 0.8.*, 
                     cereal == 0.3.5.*, 
                     base64-bytestring == 0.1.*
  Exposed-Modules: 
                   Hoodle.Accessor
                   Hoodle.Config
                   Hoodle.Coroutine
                   Hoodle.Coroutine.Callback
                   Hoodle.Coroutine.Commit
                   Hoodle.Coroutine.Default
                   Hoodle.Coroutine.Draw
                   Hoodle.Coroutine.Eraser
                   Hoodle.Coroutine.EventConnect
                   Hoodle.Coroutine.File
                   Hoodle.Coroutine.Highlighter
                   Hoodle.Coroutine.Layer
                   Hoodle.Coroutine.Mode
                   Hoodle.Coroutine.Page
                   Hoodle.Coroutine.Pen
                   Hoodle.Coroutine.Scroll
                   Hoodle.Coroutine.Select
                   Hoodle.Coroutine.Select.Clipboard
                   Hoodle.Coroutine.Window
                   Hoodle.Device
                   Hoodle.GUI
                   Hoodle.GUI.Menu
                   Hoodle.ModelAction.Adjustment
                   Hoodle.ModelAction.Clipboard
                   Hoodle.ModelAction.Eraser
                   Hoodle.ModelAction.File
                   Hoodle.ModelAction.Layer
                   Hoodle.ModelAction.Page
                   Hoodle.ModelAction.Pen 
                   Hoodle.ModelAction.Select
                   Hoodle.ModelAction.Window
                   Hoodle.Script
                   Hoodle.Script.Coroutine
                   Hoodle.Script.Hook
                   Hoodle.Type
                   Hoodle.Type.Alias 
                   Hoodle.Type.Canvas
                   Hoodle.Type.Clipboard
                   Hoodle.Type.Coroutine
                   Hoodle.Type.Enum
                   Hoodle.Type.Event 
                   Hoodle.Type.PageArrangement 
                   Hoodle.Type.Predefined
                   Hoodle.Type.Undo 
                   Hoodle.Type.Window
                   Hoodle.Type.XournalState
                   Hoodle.Util
                   Hoodle.Util.Verbatim 
                   Hoodle.View.Coordinate
                   Hoodle.View.Draw
  Other-Modules: 
                   Paths_hoodle_core
  c-sources: 
                   csrc/c_initdevice.c
  include-dirs:    csrc
  install-includes: 
                   csrc/c_initdevice.h
                   csrc/template-hsc-gtk2hs.h
  cc-options:      -Wno-pointer-to-int-cast
  if flag(poppler)
    cpp-options: -DPOPPLER
