Name:		hoodle-daemon
Version:	0.0.999
Synopsis:	hoodle daemon using D-bus
Description: 	hoodle daemon using D-bus
Homepage:       http://ianwookim.org/hoodle
License: 	GPL-3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Category:       Application
Tested-with:    GHC == 7.4, GHC == 7.6
Build-Type: 	Custom
Cabal-Version:  >= 1.8
data-files:     
Source-repository head
  type: git
  location: http://www.github.com/wavewave/hoodle-daemon

Executable hoodle-daemon
  Main-is: hoodle-daemon.hs
  hs-source-dirs: exe
  ghc-options: 	-Wall -funbox-strict-fields -fno-warn-unused-do-bind -fno-warn-orphans
  ghc-prof-options: -caf-all -auto-all

  Build-Depends:   base,
                   process,
                   directory,
                   text,
                   fsnotify,
                   system-filepath,
                   dbus, 
                   network-simple, 
                   network-info, 
                   bytestring, 
                   binary, 
                   transformers >= 0.3,
                   filepath, 
                   containers

  Other-Modules:   ImageFileNotify
                   Network
                   Window