Name:		hoodle-parser
Version:	0.1
Synopsis:       Hoodle file parser
Description: 	Text parser for hoodle xml file
Homepage:       http://ianwookim.org/hoodle
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Category:       Text
Build-Type: 	Simple
Cabal-Version:  >= 1.8
Source-repository head
  type: git
  location: http://www.github.com/wavewave/hoodle-parser


Library
  hs-source-dirs: src
  ghc-options: 	-Wall -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: base == 4.*, 
                 mtl == 2.*, 
                 transformers == 0.3.*, 
                 attoparsec == 0.10.*, 
                 bytestring == 0.9.*, 
                 containers == 0.4.*, 
                 -- xml-conduit == 1.0.*,
                 conduit == 0.5.*,
                 strict == 0.3.*, 
                 attoparsec-conduit == 0.5.*,
                 hoodle-types >= 0.0.999 && < 0.2, 
                 xournal-types >= 0.4.999 && < 0.6,
                 -- xml-types == 0.3.*, 
                 text == 0.11.*,
                 lens >= 2.4 && < 2.7, 
                 zlib-conduit == 0.5.*
  Exposed-Modules: 
                   -- Text.Hoodle.Parse
                   Text.Hoodle.Parse.Attoparsec
                   -- Text.Hoodle.Parse.Conduit -- for the time being 
                   Text.Hoodle.Parse.Zlib
                   Text.Hoodle.Translate.FromXournal



 
		 
