Name:		hoodle-types
Version:	0.0.999
Synopsis:	Data types for programs for hoodle file format
Description: 	Hoodle file format data type including generic interface
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Category:       Data
Build-Type: 	Simple
Cabal-Version:  >= 1.8
data-files:     CHANGES
Source-repository head
  type: git
  location: https://www.github.com/wavewave/hhoodle


Library
  hs-source-dirs: src
  ghc-options: 	-Wall -funbox-strict-fields -fno-warn-unused-do-bind -fno-warn-orphans
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                   base == 4.*, 
                   bytestring == 0.9.*, 
                   strict == 0.3.*, 
                   containers == 0.4.*, 
                   lens >= 2.4 && < 2.7,
                   TypeCompose == 0.9.*, 
                   cereal == 0.3.*, 
                   cairo == 0.12.*
  Exposed-Modules: 
                   Data.Hoodle.Generic
                   Data.Hoodle.Simple
                   Data.Hoodle.BBox
                   Data.Hoodle.BBoxImg 
                   Data.Hoodle.Map
                   Data.Hoodle.Buffer
                   Data.Hoodle.Predefined 
                   Data.Hoodle.Select
                   Data.Hoodle.Util
  Other-Modules: 

 
		 