Name:		hoodle-types
Version:	0.2.1
Synopsis:	Data types for programs for hoodle file format
Description: 	Hoodle file format data type including generic interface
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Category:       Data
Build-Type: 	Simple
Cabal-Version:  >= 1.8
data-files:     CHANGES
Source-repository head
  type: git
  location: https://www.github.com/wavewave/hoodle-types


Library
  hs-source-dirs: src
  ghc-options: 	-Wall -funbox-strict-fields -fno-warn-unused-do-bind -fno-warn-orphans
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                   base == 4.*, 
                   bytestring >= 0.9, 
                   mtl > 2, 
                   strict == 0.3.*, 
                   containers >= 0.4, 
                   lens >= 2.5,
                   cereal == 0.3.*, 
                   uuid >= 1.2.6
  Exposed-Modules: 
                   Data.Hoodle.BBox
                   Data.Hoodle.Generic
                   Data.Hoodle.Generic.Simple
                   Data.Hoodle.Predefined 
                   Data.Hoodle.Primitive 
                   Data.Hoodle.Select
                   Data.Hoodle.Simple
                   Data.Hoodle.Simple.V0_1_1
                   Data.Hoodle.Util
                   Data.Hoodle.Zipper 

  Other-Modules: 

 
		 